--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,21 @@
             {
                 "extensions": [".js", ".jsx"]
             }
-        ]
+        ],
+        "import/prefer-default-export": 0,
+        "import/no-extraneous-dependencies": [
+            "error",
+            {
+                "devDependencies": true
+            }
+        ],
+        "linebreak-style": 0
+    },
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "paths": ["src"]
+            }
+        }
     }
 }
